# Outlook-Classic-MCP

./: .gitignore  LICENSE  README.md  install.bat  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish.yml
scripts/: install_to_clients.py
skills/outlook/: SKILL.md
skills/outlook/references/: gotchas.md  recipes.md  setup.md  tools.md
src/outlook_mcp/: bridge.py
src/outlook_mcp/client/: mail.py
src/outlook_mcp/tools/: mail.py
tests/: test_formatting.py  test_paths.py  test_safety.py  test_schemas.py
